Fix map z-index

--- a/base/src/scss/common/_com-edition.scss
+++ b/base/src/scss/common/_com-edition.scss
@@ -51,3 +51,6 @@ figcaption{
         fill: #000;
     }
 }
+.section-map .leaflet-container {
+	z-index: 0;
+}
